# root_mcp_server

./: LICENSE  README.md  format.py  pathc.diff  pyproject.toml  pyrightconfig.json  requirements.txt  test_histogram.py  test_mcp_client.py  test_persistent_window.py
root_mcp_server/: __init__.py  cli.py  executor.py  server.py
scripts/: launch_root_mcp_debug.sh
