[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "root-mcp-server"
version = "0.1.0"
description = "MCP server for ROOT: execute Python and C++ directly via PyROOT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp[cli]>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=0.990",
]

[project.scripts]
root-mcp = "root_mcp_server.cli:main"

[tool.setuptools.packages]
find = {where = ["."]}
